--- a/.github/workflows/sonar.yml
+++ b/.github/workflows/sonar.yml
@@ -6,21 +6,53 @@ on:
       - develop
     paths:
       - 'frontend/**'
-defaults:
-  run:
-    working-directory: frontend
+
 jobs:
-  sonar-analysis:
+  sonarqube:
     runs-on: ubuntu-latest
+    defaults:
+      run:
+        working-directory: frontend
+    services:
+      sonarqube:
+        image: sonarqube
+        ports:
+          - 9000:9000
+    env:
+      NODE_OPTIONS: '--max-old-space-size=5384'
     steps:
-      - name: Checkout code
+      - name: Checkout
         uses: actions/checkout@v4
-        with: 
-          fetch-depth: 0
-      - name: Sonar analysis
-        uses: sonarsource/sonarcloud-github-action@master
         with:
-          projectBaseDir: frontend
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-          SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
+          fetch-depth: 0
+      - uses: pnpm/action-setup@v3
+        with:
+          version: latest
+      - name: Setup Node
+        uses: actions/setup-node@v4
+        with:
+          node-version: 'lts/*'
+          cache: 'pnpm'
+      - name: Wait a bit for service to come up
+        run: sleep 60
+      - uses: actions/setup-java@v4
+        with:
+          distribution: 'zulu'
+          java-version: '21'
+      - name: Check index
+        run: wget -qO- http://localhost:9000/batch/index
+      - name: Run Sonarqube
+        run: pnpx sonar-scanner -X -Dsonar.host.url=http://localhost:9000/ -Dsonar.login=admin -Dsonar.password=admin -Dsonar.projectKey=project
+      - name: Upload sonarqube results to MyCoverage
+        uses: serialexp/mycoverage-action@v2
+        with:
+          endpoint: https://mycoverage.se1.serial-experiments.com/
+          kind: sonarqube
+          sonarqubeServer: http://localhost:9000/
+          sonarqubeLogin: admin
+          sonarqubePassword: admin
+      - name: Upload changefrequency to MyCoverage
+        uses: serialexp/mycoverage-action@v2
+        with:
+          endpoint: https://mycoverage.se1.serial-experiments.com/
+          kind: changefrequency
